Refactor project structure and update dependencies
- Added Pods.xcodeproj reference in Runner.xcworkspace.
- Removed unused bottom_bar.dart and drawer.dart files.
- Updated main.dart to use components/drawer.dart and added Google Fonts dependency.
- Enhanced UI in main.dart with new layout and styling.
- Updated pubspec.lock and pubspec.yaml to include new dependencies (google_fonts, path_provider, etc.).
- Created new Podfile and Podfile.lock for iOS dependencies.
- Added components for ads and bottom bar.
- Recreated drawer.dart in components directory.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   search_app_bar_page: ^2.5.0
+  google_fonts:
 
 dev_dependencies:
   flutter_test:
@@ -25,3 +26,4 @@ flutter:
     - assets/icons/shopping-cart.png
     - assets/icons/search.png
     - assets/icons/drawer.png
+    - assets/icons/hand-wave.png
