Refactor code structure for improved readability and maintainability

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,3 +27,4 @@ flutter:
     - assets/icons/search.png
     - assets/icons/drawer.png
     - assets/icons/hand-wave.png
+    - assets/images/ads1.png
