Refactor code structure for improved readability and maintainability

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,3 +28,5 @@ flutter:
     - assets/icons/drawer.png
     - assets/icons/hand-wave.png
     - assets/images/ads1.png
+    - assets/images/ads2.png
+    - assets/images/ads3.png
