--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,3 +30,4 @@ flutter:
     - assets/images/ads1.png
     - assets/images/ads2.png
     - assets/images/ads3.png
+    - assets/icons/watch-smart.png
