Add new icons and a snackbar utility for feature notifications
- Added new PNG icons: boot.png, glasses.png, and tshirt.png to the assets/icons directory.
- Implemented a snackbar utility function in snackbar.dart to display a message when a feature is not ready yet.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,3 +31,7 @@ flutter:
     - assets/images/ads2.png
     - assets/images/ads3.png
     - assets/icons/watch-smart.png
+    - assets/icons/tshirt.png
+    - assets/icons/bag.png
+    - assets/icons/boot.png
+    - assets/icons/glasses.png
