--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,3 +37,8 @@ flutter:
     - assets/icons/glasses.png
     - assets/images/apple-watch.png
     - assets/images/samsung-watch.avif
+    - assets/icons/settings.png
+    - assets/icons/info.png
+    - assets/icons/messages.png
+    - assets/icons/contrast.png
+    - assets/icons/language.png
