Refactor code structure for improved readability and maintainability

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,3 +72,11 @@ flutter:
     - assets/products/bags/bag4.png
     - assets/products/bags/bag5.png
     - assets/products/bags/bag6.png
+
+
+    - assets/products/boots/boots1.png
+    - assets/products/boots/boots2.png
+    - assets/products/boots/boots3.png
+    - assets/products/boots/boots4.png
+    - assets/products/boots/boots5.png
+    - assets/products/boots/boots6.png
